サイトの機能を追加

--- a/src/guide/computer/コンピュータ.md
+++ b/src/guide/computer/コンピュータ.md
@@ -37,6 +37,24 @@ google driveに追加した画像参照
 
 ここからweb applicaiton SNSは良いと思うが，twitter cloneとかはハイレベルすぎて部分的に言及するくらいか．何をやりたいのかと言えば
 
+HTTP protocolの階層づけ =>applicationだけに集中して良いことを納得．separate of concern interface
+
+https://people.scs.carleton.ca/~lanthier/teaching/COMP1406/Notes/COMP1406_Ch12_NetworkProgramming.pdf
+
+![Browser components](https://web-dev.imgix.net/image/T4FyVKpzu4WKF1kBNvXepbi08t52/PgPX6ZMyKSwF6kB8zIhB.png?auto=format)
+
+https://web.dev/howbrowserswork/ より
+
+https://developer.mozilla.org/en-US/docs/Learn/Server-side/First_steps/Client-Server_overview
+
+ここから実際にSNS風のアプリをつくる
+
+
+
+
+
+
+
 1. HTTPの仕組み(これはメモリをただうつすだけでプロトコルがなければ何も分からないという観点から必須)
 
 2. これを使ったwebの仕組み(ファイルをおくって，それをブラウザが表示，実行して，データを送り返して，みたいな)
