--- a/src/guide/statistics/統計学大まかな流れ.md
+++ b/src/guide/statistics/統計学大まかな流れ.md
@@ -90,7 +90,7 @@ Dは痩せ薬として開発された．(現実的にはもちろん，受容体
 
 あとは第五章の抜き取り検査も練習として追加
 
-大数の法則と中心極限定理もどこかで入れる
+大数の法則(統計でどこに自然に入るのか良く分からない，ここで入れなくてもいいか)と中心極限定理もどこかで入れる
 
 
 
@@ -132,7 +132,7 @@ https://www.scribbr.com/statistics/chi-square-distributions/
 
 ・とくに色々な分布を導出する際に，どんな条件が成り立っていれば，その分布になるのか，という観点で説明
 
-・例としては待ち行列，信頼性工学(ガンマ分布,ポアソン，指数，ワイブル分布)，パレート分布， cf.統計分布のobsidian
+・例としては
 
 
 
