--- a/src/posts/essay/私の幸福論.md
+++ b/src/posts/essay/私の幸福論.md
@@ -2,34 +2,37 @@
 layout: layouts/post.njk
 ---
 
-<span class="marginnote img-holder pb-10" >![私の幸福論 (ちくま文庫) | 福田恆存 |本 | 通販 | Amazon](https://m.media-amazon.com/images/I/514KJPNX3XL.jpg){width=45% .shadow-lg }</span>
-
 # 私の幸福論
 
-福田恆存が女性誌に連載した小論の集まりで，一つ一つの文章に直接的なつながりはなく独立して読める．そのなかから『美醜について』の項をまとめる．
+<span class="marginnote img-holder pb-10" >![私の幸福論 (ちくま文庫) | 福田恆存 |本 | 通販 | Amazon](https://m.media-amazon.com/images/I/514KJPNX3XL.jpg){width=45% .shadow-lg } <span class="w-2/4 pt-3">残念ながら「あなたは**幸福**にならねばならない」とは作中のどこにも述べられていない．</span></span>
 
-## 美醜について
+## 『美醜について』要旨
 
-外見の美醜は男女の幸福に大きな影響を与える．美醜は男女の恋愛・結婚をはじめ，多くの場面で決定的な役割を果たすから，醜く生まれたついたものは，幸福を得る機会において損をする．
+外見の美醜は男女の幸福に大きな影響を与える．美醜は恋愛・結婚をはじめ，多くの場面で決定的な役割を果たすから，醜く生まれたついたものは，幸福を得る機会において損をする．
 
 顔なんかより，心が一番大事なんだ，という考えで自分を慰めるのは良くない．マイナスの面に目をつぶっても現実は消滅しない．それは無意識の領域にもぐりこみ，ひがみ・劣等感になる．また，弱点をとりかえそうと長所にすがれば，他者への不寛容に繋がる．自分の才能と実力で生きてきた「精神的なる」女性が，顔の魅力で得している「肉体的なる」女性に示す意地悪さほど嫌なものはない．他にプラスがあってもなくても，自分の弱点だけは素直に認めて，それにとらわれないことが大切なのだ．
 
-弱点を認めることは，それを治す努力を捨てることを意味しないが，誰にでも，生まれ変わらなければ治らないほどの弱点があるものだ．そういう限界に気づいた時に，ひねくれてはいけない．例えば，美貌を重視しすぎる社会がだめだと，社会のせいにしても，それは自分を甘やかしてくれない社会への復讐心に過ぎない．
+弱点を認めることは，それを治す努力を捨てることを意味しないが，誰にでも，生まれ変わらなければ治らないほどの弱点があるものだ．そういう限界に気づいた時に，ひねくれてはいけない．例えば，美貌を重視しすぎる社会がだめだと，社会のせいにするのはいけない．それは自分を甘やかしてくれない社会への復讐心に過ぎない．
 
-自分で努力して得たものよりも生まれたときから持っているものを高く評価する社会は間違っていないか，と思うかも知れないが，生まれながらにどうにもならないことはどんなことについてもあり，社会には優れた者と劣った者がいる以上，完全に公平な社会はやってこない．そういうことにこだわらない心を養うのが幸福の掴み方である．
+自分で努力して得たものよりも生まれたときから持っているものを高く評価する社会は間違っていないか，と思うかも知れないが，生まれながらにどうにもならないことは，どんなことについてもあり，社会には生まれつき優れた者と劣った者がいる以上，完全に公平な社会はやってこない．そういうことにこだわらない心を養うのが幸福の掴み方である．
 
 また，長い目で見れば美人ということが不幸のもとにもなりうる．男に持て，ちやほやされている内に年を取った元美人は，それまで外面の美に寄りかかっていたために，中身はなく，年輪の美しさが少しもない．親からもらった遺産を食いつぶして乞食になったものと同じである．
 
 ## 感想
 
-美醜についての文でありながら，もっと一般的に幸福を妨げうる部分とどう折り合いをつけるのかという文章．
+福田恆存が女性誌に連載した小論の集まりで，一つ一つの文章に直接的なつながりはなく独立して読める．まとめたのは美醜がテーマでありながら，もっと一般的に幸福を妨げうる部分と，どう折り合いをつけるのかという文章．
 
-文中には次のような筆者の次男が骨の病気で生涯びっこ()になるかもしれない，という状況のときのことも書かれている．
+文中には次のような筆者の次男が骨の病気で生涯びっこ <span class="sidenote-number"></span><span class="sidenote">片方の足に故障があって，歩くときに釣り合いがとれないこと</span> になるかもしれない，という状況のときのことも書かれている．
 
 *不具はたいしたことではない，困るのは，そのためにおこる心のひがみだということでした．いつか私は子供と二人きりのとき，いってやりました．友達が「びっこ」といおうと「かたわ」とからかおうと，平気でいるんだよ．じっさいそうなんだからな．みんな意地わるでいうんじゃない．おもしろいからいうのさ．おまえだって，そういう友だちがいたらからかうだろう．それだけのことだ．みんなおなじ人間じゃ，つまらない．なかにびっこがいてもいいさ．・・・私も，長男も，べつにわざと「びっこ」と口にだしはしませんでしたが，いっしょにすもうをとったりなにかするとき，おのずと，「びっこに負けるものか」などというざれことばが口をついて出るのを，しいて避けようとはしませんでした．*
 
 このほか
 
-- 『宿命について』『自由について』は『人間，この劇的なるもの』を分かりやすくまとめたもの
-- 『教養について』は，これを一般に教養と呼ぶのかはさておき，われわれの重要な心の働きの一つについて明確に述べている
-- 『恋愛について』は今まで読んだなかで恋愛について最もまとまった文章
+- 『宿命について』『自由について』
+─ 『人間，この劇的なるもの』とも関連する文章{.pb-3}
+- 『教養について』
+─ これを一般に教養と呼ぶのかはさておき，われわれの重要な心の働きの一つについて明確に述べている{.pb-3}
+- 『恋愛について』
+─ 今まで読んだなかで恋愛について最もまとまった文章
+
+といったものが収録されている．
