--- a/src/posts/猫の大虐殺.md
+++ b/src/posts/猫の大虐殺.md
@@ -2,43 +2,61 @@
 layout: layouts/post.njk
 ---
 
-責任概念を例にモチベーションを説明
+# 猫の大虐殺
 
-知識概念分析の実例　概念分析というものがどういうものなのかを本文に即して
+<span class="marginnote img-holder pb-10" >![猫の大虐殺 | ロバート ダーントン, 真夫, 海保, 洋一, 鷲見 |本 | 通販 | Amazon](https://m.media-amazon.com/images/I/41sUBa0fxZL.jpg){width=45% .shadow-lg }</span >
 
-猫の大虐殺の序章の最後のページ
+## 本書の目的意識
 
-ルソーの例
+この本は，過去の記録から，その当時の人々のものの考え方を追求する．つまり人々が自己の世界をどう解釈し，どう意味を与え，どう感情を注いだのかを知ろうとする．
 
-感想として猫の大虐殺でやっているようなやりかたが哲学的な概念分析よりも力をもつであろうことを主張する
+哲学者であれ一般人であれ，人々にはある世界観があり，それに従って現実を秩序立てている．たしかに一般人が抽象命題を弄ぶことはないが，具体的な事物や，民話や儀式といった文化が提供するものを相手に彼らは思考しているのだ．
 
-## 何をやりたいのか
+そして，その思考の方法や感情の分類の仕方は，自身の属する文化が提供する枠内に制限されている．しかし彼らはその枠内にありながらも語義の境界線を様々にテストして入れ替え，概念を巧みに操作するのだ．この観点から，ディドロやルソーが抱えた問題は，民話の語り手である農民や猫の虐殺に興じる職人の問題と同列に扱われる．
 
-この本は，過去の記録から，その当時の人々のものの考え方を追求するしようとする．つまり人々が自己の世界をどう解釈し，どう意味を与え，どう感情を注いだかを知ろうとする．具体的にどの過去を対象にこれを実践するのか，これは恣意的になるがどの過去を選んでも本質的な価値は変わらないだろう．本書では18世紀のフランス人をターゲットにしている．
+こうして猫の大虐殺の目次は次のとおりとなる．
 
-人々にはある世界観があり，それに従って現実を秩序立てて思考する．それは哲学者も一般人も変わらない．たしかに一般人が抽象命題を弄ぶことはないが，具体的な事物や，民話や儀式といった文化が提供するものを相手に思考するのだ．
 
-そして人々の個人的な感情の分類や事物の解釈の仕方は，自身の属する文化が提供する枠内に制限されている．しかし彼らはその枠内にありながらも語義の境界線を様々にテストして入れ替えることができる．
 
-このように本書では知識人と一般人を，ある文化の制限のもとで思考するもの，その制限内で概念を巧みに操作するものとして同列に扱う．この観点ではディドロやルソーが抱えた問題は，民話の語り手である農民や猫の虐殺に興じる職人の問題と同じなのだ．
+いずれの章においても，文化的制限の元での，もしくは制限を逆に利用した概念操作に焦点は当てられている．
 
 とくにわかりやすい例として『知識の系統樹を刈り整える哲学者たち ―『百科全書』の認識論的戦略―』を見ていこう．
 
-## 知識の系統樹
+## 『知識の系統樹』要旨
 
 ディドロとダランベールは『百科全書』で何をしたのか？
 
-それは知識の中心を哲学とすることで，知識概念を改定し，それによって，知識を聖職者から啓蒙主義者の手にうつすことである．
+知識の中心を哲学とすることで，知識概念を改定し，それによって，知識を聖職者から啓蒙主義者の手にうつすことである．
 
-概念は恣意的で権力と結びついている．例えば恣意性については，ミシェル・フーコーが『言葉と物』で論じている中国の百科辞典の例を考えよう．
+概念は恣意的である．例えば恣意性については，ミシェル・フーコーが『言葉と物』で論じている中国の百科辞典の例を考えよう．
 
-このように恣意的であるにも関わらず我々は概念カテゴリーを自明のものとして普通疑わない．それは概念は思考するよりも前に我々に与えられたものであり，概念なしに考えることはできないからである．
+<div class="italic">
+    
+動物は次のごとく分けられる。
 
-そして概念は我々の思考を方向づける．例えば，．だから権力者は都合の良い概念を広める．
+- (a)皇帝に属するもの
+- (b)香の匂いを放つもの
+- (c)飼いならされたもの
+- (d)乳呑み豚
+- (e)人魚
+- (f)お話に出てくるもの
+- (g)放し飼いの犬
+- (h)この分類自体に含まれているもの
+- (i)気違いのように騒ぐもの
+- (j)算えきれぬもの
+- (k)駱駝（らくだ）の毛のごく細の毛筆で描かれたもの
+- (l)その他
+- (m)いましがた壺をこわしたもの
+- (n)とおくから蝿のように見えるもの。
 
+</div>
 
+このように恣意的であるにも関わらず我々は概念カテゴリーを自明のものとして普通疑わない．それは概念は思考するよりも前に我々に与えられたものであり，概念なしに考えることはできないからである．それゆえ概念とは，ある時代・地域に独特の，思考を方向づけるある種の枠のようなものだと言える．
+これをフーコーはエピステーメーと呼んだ．
 
-このように彼らは秩序づけは恣意的であることを自覚していた．それは彼らがあたらしい秩序を世界に押し付けようとしていたからである．
+*＜エピステメー＞なる用語によってわれわれの解するのは、或る与えられた時代において、諸々の認識論的形象、科学、そしてときには形式化されたシステムを生み出すさまざまな言説＝実践を統一する諸連関の総体である。*
+
+知識は聖職者に属するものであった．しかし彼らは秩序づけは恣意的であることを自覚していた．それは彼らがあたらしい秩序を世界に押し付けようとしていたからである．
 
 具体的には彼らが百科全書をつくるモチベーションとなったチェインバーズの『百科全書』では知識の系統樹は次のようになる．
 
@@ -76,11 +94,27 @@ layout: layouts/post.njk
 
 岩波現代文庫版ではここで紹介したディドロの第5章と第3章が削除されているので，買うとしたら岩波書店版を買うのがいいと思う．特にディドロの第5章では紹介の通り概念改変の具体的なプロセスが最もわかりやすく示されているから．しかしどちらも絶版で中古品の流通も少ない．
 
+<div class="hidden">
 
+責任概念を例にモチベーションを説明
 
+知識概念分析の実例　概念分析というものがどういうものなのかを本文に即して
 
+猫の大虐殺の序章の最後のページ
 
+ルソーの例
 
+感想として猫の大虐殺でやっているようなやりかたが哲学的な概念分析よりも力をもつであろうことを主張する
+    
+    具体的にどの過去を対象にこれを実践するのか，これは恣意的になるがどの過去を選んでも本質的な価値は変わらないだろう．本書では18世紀のフランス人をターゲットにしている．
+    
+    人々にはある世界観があり，それに従って現実を秩序立てて思考する．それは哲学者も一般人も変わらない．たしかに一般人が抽象命題を弄ぶことはないが，具体的な事物や，民話や儀式といった文化が提供するものを相手に彼らは思考するのだ．
+    
+    そして人々の個人的な感情の分類や事物の解釈の仕方は，自身の属する文化が提供する枠内に制限されている．しかし彼らはその枠内にありながらも語義の境界線を様々にテストして入れ替えることができる．
+    
+    このように本書では知識人と一般人を，ある文化の制限のもとで思考するもの，その制限内で概念を巧みに操作するものとして同列に扱う．この観点ではディドロやルソーが抱えた問題は，民話の語り手である農民や猫の虐殺に興じる職人の問題と同じなのだ．
+    
+    とくにわかりやすい例として『知識の系統樹を刈り整える哲学者たち ―『百科全書』の認識論的戦略―』を見ていこう．
 
-
-
+    人々の個人的な感情の分類や事物の解釈の仕方は，自身の属する文化が提供する枠内に制限されている．
+</div>
