--- a/src/posts/notes/トロッコ問題への回答.md
+++ b/src/posts/notes/トロッコ問題への回答.md
@@ -2,41 +2,48 @@
 layout: layouts/post.njk
 ---
 
-著書の安藤馨は法哲学者．この本は前半の10ページ程度しかまだ読んでいないので，その価値を語ることはできない．難易度としては安藤の指導教官でもある井上達夫の『共生の正義』よりも難しい(つまりウルトラ難しい)ので，少なくともそっちを読んで理解できるかを確認してから買ったほうがいい．とはいっても，難しさは分析的に話が込み入っていることによる難しさであって，何を言っているのかよくわからないという難しさではない．
+# トロッコ問題への回答
 
-しっかり読んでいない本をおすすめするつもりはないが，この本の第一章の一段落目に書かれたことがいろいろな問題を考える上でとても役に立つ思考だと思うので紹介することにする．ざっとまとめると次の段落の通り．
+## 個人と統治
 
-功利主義は何に関する主張なのか，という根本的な点で2分される．つまり，功利主義をあるべき統治，あるべき法を指し示す理論とするのか，個々人が従うべき道徳の原理とするのかということである．『統治と功利』の目的は，個人が何をなすべきかではなく，いかなる法・国家制度が望ましいかを考えることにあるので，功利主義を前者，統治の原理として考えていく．
+この回答を思いついたのは，『統治と功利』という本を読んだときのこと．といっても，前半の10ページ程度しかまだ読んでいないので，その価値を語ることはできない．しかし，この本の最初に書かれたことが，いろいろな問題を考える上でとても役に立つ思考だと思うので概要を次の段落にまとめる．
 
-例えば個人で功利主義を採用するなら，自分の最愛の人を傷つけるほうが全体の幸福が増加するとき，その人は最愛の人を傷つけなくてはならないが，国家で功利主義を採用するなら，国家にはアモーレは存在しないので，この問題が生じることはない．
+功利主義は「何に関する主張なのか」という根本的な点で2つに分けることができる．つまり，功利主義をあるべき統治，あるべき法を指し示す理論とするのか，個々人が従うべき道徳の原理とするのかということである．『統治と功利』の目的は，個人が何をなすべきかではなく，いかなる法・国家制度が望ましいかを考えることにあるので，功利主義を前者，統治の原理として考えていく．
 
-この本を読むまでは，この個人に属する問題なのか，統治に属する問題なのかを区別する，特に統治に視点をうつすということに思い至らなかった．
+例えば個人で功利主義を採用するなら，自分の最愛の人を傷つけるほうが全体の幸福が増加するとき，その人は最愛の人を傷つけることになる．一方，国家で功利主義を採用するなら，国家には最愛の人は存在しないので，この問題が生じることはない．
 
-この「統治視点」の考え方をつかって2つの問題を回答してみよう．
+これを使って，トロッコ問題を含む，2つの問題に回答してみたいと思う．
 
-1. トロッコ問題
+## 1.トロッコ問題
 
-   この問題がどういう問題なのかはwikipediaを参照．「統治視点」を使って回答すると次の通り．
+この問題がどういう問題なのかは[wikipedia](https://ja.wikipedia.org/wiki/%E3%83%88%E3%83%AD%E3%83%83%E3%82%B3%E5%95%8F%E9%A1%8C)を参照．回答は次の通り．
 
-   あなたが個人として行動するときには好きにしたら良い，法として定めたり，国家の一員として行動するときには何もしてはいけない．
+あなたが個人として行動するときには好きにしたら良い．法として定めたり，国家の一員として行動するときには何もしてはいけない．{.py-10 }
 
-   前半は個人としての対応，後半は国家としての対応を述べている．
+前半は個人としての対応，後半は国家としての対応を述べている．
 
-   まず，国家としての対応の方から．もし，トロッコ問題に対して国がなにかの介入をする，例えば法律で，このような場合には5人の方を助けなさいと定めるとしよう．どういう定めでもいいが，とにかく何らかの介入をし得るとしよう．このとき，トロッコ問題が例外的な特殊問題でないならば，一般的に，国はなんらかの基準(例えばより多くの命を助けられること)に則って，もし介入がなければ普通に生きていただろう国民の命を奪う可能性がある，ということになる．これは恐怖である．例えば5人の国民が病気で心臓・肺・肝臓・腎臓・膵臓を欲している時に，あなたの各臓器がドナーとして最適なことがわかり，いろいろ考慮した結果，あなたの臓器をこの5人に渡したほうが良いと考えられるなら，国はあなたを殺して5人の国民を助けることになる．(残念ながらこの5つの臓器を全て失った上で生きる方法はまだない)他の国民のために，例えば税金という形で財産権の一部が侵害されるのはやむを得ないことだが，生命の侵害を許可することはできないだろう．もしそれを許可すれば，任意のタイミングで他の国民のために私は死にうる，ということを許可することになる．これを是としないのなら，国家としての対応ではトロッコを動かすべきではない．
+まず，国家としての対応の方から．仮に，トロッコ問題で提示されるような状況に対して国がなにかの介入をする，例えば法律で，このような場合には5人の方を助けなさいと定めるとしよう．どういう定めでもいいが，とにかく何らかの介入をし得るということだ．
 
-   次に個人としての対応．これは何をしても良い．見て見ぬ振りをしてもいいし，助けることで自分の心が喜ぶ方を助けても良いし，なんらかの倫理原則に則って行動しても良い．何をしても，それは個人としての行動なので，その行動・その出来事は一回限りのもので，他者に影響を与えることはない．(国としての施策は，たとえそれが一回しか行われなかったとしても，一般性をもつ．つまり，次同じようなことが起これば，同じことがおきるのだと．個人の場合は，「同じようなこと」の範囲が非常に限定的だし，たとえ同じようであっても別に行動してもおかしいわけではない)もちろんこれは，考え悩む必要がないと言っているわけではない．個人が立ち向かう倫理的な問題は消えることはないが，実際的には結果として何をしても他の人にとって大きな問題ではないということである．
+このとき，トロッコ問題が例外的な特殊問題でないならば，一般的に，国はなんらかの基準<span class="sidenote-number"></span> <span class="sidenote">例えばより多くの命を助けられること</span>に則って，もし介入がなければ普通に生きていただろう国民の命を奪う可能性がある，ということになる．
 
-2. 「私は将来数学を使わないのになんで勉強しなきゃいけないの？」
+例えば5人の国民が病気で心臓・肺・肝臓・腎臓・膵臓を欲している時に，あなたの各臓器がドナーとして最適なことがわかり，いろいろ考慮した結果，あなたの臓器をこの5人に渡したほうが良いと考えられるなら，残念ながらこれらの臓器を全て失った上で生きる方法はまだないので，国はあなたを殺して5人の国民を助けることになる．
 
-   個人を中心に考えるかぎり非合理的に見えるが，全体で考えると合理的であることがある．ここで問われていることもその1つである．
+他の国民のために，例えば税金という形で財産権の一部が侵害されるのはやむを得ないことだが，生命の侵害を許可することはできないだろう．もしそれを許可すれば，任意のタイミングで他の国民のために私は死にうる，ということを許可することになる．これを是としないのなら，国家としての対応ではトロッコを動かすべきではない．
 
-   現代文明を維持するためには(ましてやそれを発展させようと思えばなおさら)高度な数学の理解をしている人間が必要である．といってもそれは，人類全体から見ればごく少数で十分である．
+次に個人としての対応．これは何をしても良い．見て見ぬ振りをしてもいいし，助けることで自分の心が喜ぶ方を助けても良いし，なんらかの倫理原則に則って行動しても良い．何をしても，それは個人としての行動なので，その行動・その出来事は一回限りのもの<span class="sidenote-number"></span> <span class="sidenote">国としての施策は，たとえそれが一回しか行われなかったとしても，一般性・規則性をもつ．つまり，次同じようなことが起これば，同じことをするのだと．個人の場合は，「同じようなこと」の範囲が非常に限定的だし，たとえ同じようなことであっても別様に行動してもおかしくないので，行為は一回限りのものになる</span>で，他者に影響を与えることはない．もちろんこれは，考え悩む必要がないと言っているわけではない．個人が立ち向かう倫理的な問題は消えることはないが，実際的には何をしても社会にとって大きな問題にはならないということである．
 
-   では始めからこのごく少数の人間だけに数学を教えればいいのではと思うがそうもいかない．例えば多くの人間が必要とする四則演算くらいまでを必須にして，その以降の内容は適正に合わせて教えようとしても，この適性というものは小学校高学年くらいの年代では正確にはわからない．それに仮に分かったとしても，実施すれば社会から反発をうけるだろう．(「将来この子が知的な職業につくことはないので割り算以降の内容は教えてないこととします」と言われれば「不当にこの子の将来が制限された」と保護者は主張してくなるだろう)妥協案として高校生まで待ち，文系理系に自主的に分かれてもらうことにする．
+## 2.「私は将来数学を使わないのになんで勉強しなきゃいけないの？」
 
-   このように見ると，ほとんどの人が将来全く使わない数学を教えることは非効率ではあるが，現在の日本の状況では合理性がある方法である．(この論法を物理とか化学に応用することはできるが，古典には応用できない．なぜなら古典は現代文明の維持・発展に直接には関わらないから．だから古典を擁護したければ別の論点が必要になる)
+個人を中心に考えるかぎり非合理的に見えるが，全体で考えると合理的である事態がある．ここで問われていることもその1つである．
 
-   直接使うことはなくても論理的に考える能力を鍛えられる，とか，受験や将来のために役立つ，という慰めよりは，文明を支えるための現在の制度の構造的欠陥が個人にのしかかった例として理解するほうが，ごまかしのない現状認識になると思う．
+現代文明を維持するためには，ましてやそれを発展させようと思えばなおさら，高度な数学を理解している人間が必要である．といってもそれは，人類全体から見ればごく少数で十分だ．
 
+では始めから，この少数の人間だけに数学を教えればいいのではと思うがそうもいかない．例えば多くの人間が必要とする四則演算くらいまでを必須にして，その以降の内容は適正に合わせて教えようとしても，この適性というものは小学校高学年くらいの年齢では正確には分からない．それに仮に分かったとしても，実施すれば社会から反発をうけるだろう．<span class="sidenote-number"></span> <span class="sidenote">「将来この子が知的な職業につくことはないので割り算以降の内容は教えてないこととします」と言われれば「不当にこの子の将来が制限された」と保護者は思うだろう．</span>妥協案として，高校生まで待って自主的に文系理系へ分かれてもらうことにする．
 
+このように見ると，ほとんどの人が将来全く使わない数学を教えることは非効率ではあるが，現在の日本の状況では一定の合理性がある．<span class="sidenote-number"></span> <span class="sidenote">この論法は物理とか化学に応用することはできるが，古典にはできない．なぜなら古典は現代文明の維持・発展に直接には関わらないから．だから古典を擁護したければ別の論点が必要になる．</span>
 
+直接使うことはなくても論理的に考える能力を鍛えられる，とか，受験や将来のために役立つ，という慰めよりは，文明を支えるための現在の制度の構造的欠陥が個人にのしかかった例として理解するほうが，ごまかしのない現状認識になると思う．
+
+## おまけ 『統治と功利』について
+
+著書の安藤馨は法哲学者．国家制度としての功利主義がリベラリズムにとって最良の構想でありうることを主張する内容(のようだ)．難易度としては安藤の指導教官でもある井上達夫の『共生の正義』よりも難しい印象を受けた．つまりウルトラ難しいので，興味をもった人は，少なくともそっちを読んで理解できるかを確認してから買ったほうがいい．とはいっても，難しさは分析的に話が込み入っていることによるものであって，何を言っているのかよくわからないという難しさではない．
